--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -5,3 +5,54 @@ ja:
         multiple_choice: "選択式"
         free_text: "自由記述"
         multiple_choice_and_free_text: "選択式 + 自由記述"
+
+  activerecord:
+    # モデルの属性名を日本語に変換するための設定
+    attributes:
+      requested_route:
+        start_point_name: "出発地の名称"
+        end_point_name: "目的地の名称"
+        start_point_location: "出発地"
+        end_point_location: "目的地"
+        is_existing_service_available: "既存サービスの利用可否"
+        requested_times: "曜日と時間"
+
+    # バリデーションエラーメッセージをモデルや属性ごとにカスタマイズする設定
+    errors:
+      models:
+        requested_route:
+          attributes:
+            start_point_location:
+              blank: "を指定してください"
+            end_point_location:
+              blank: "を指定してください"
+            requested_times:
+              blank: "を少なくとも1つ指定してください"
+            
+
+  # 全てのモデルで共通して使われるエラーメッセージの日本語訳
+  errors:
+    format: "%{attribute}%{message}"
+    messages:
+      accepted: "を受諾してください"
+      blank: "を入力してください"
+      confirmation: "が一致しません"
+      empty: "を入力してください"
+      equal_to: "は%{count}にしてください"
+      even: "は偶数にしてください"
+      exclusion: "は予約されています"
+      greater_than: "は%{count}より大きい値にしてください"
+      greater_than_or_equal_to: "は%{count}以上の値にしてください"
+      inclusion: "は一覧にありません"
+      invalid: "は不正な値です"
+      less_than: "は%{count}より小さい値にしてください"
+      less_than_or_equal_to: "は%{count}以下の値にしてください"
+      not_a_number: "は数値で入力してください"
+      not_an_integer: "は整数で入力してください"
+      odd: "は奇数にしてください"
+      present: "は入力しないでください"
+      required: "を入力してください"
+      taken: "はすでに存在します"
+      too_long: "は%{count}文字以内で入力してください"
+      too_short: "は%{count}文字以上で入力してください"
+      wrong_length: "は%{count}文字で入力してください"
